# flake8-bas

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: cleanup.yml  compatibility_tests.yml  coverage.yml  deployment.yml  release.yml  tests.yml  utils.py
flake8_bas/: __init__.py  checker.py
flake8_bbs/: checker.py
tests/: conftest.py  test_checker.py  test_file_fixtures.py  test_statement_errors.py
tests/files/invalid/: if-4.py
tests/files/valid/: if.py
tests/fixtures/: README.md  indexed_tree.py  nth_child.py  overlapping_errors.py  real_node.py
tests/fixtures/invalid/: assert-11.py  assert-4.py  assert-5.py  assert-6.py  assert-8.py  assert-9.py  async_def-11.py  async_def-8.py  async_def-9.py  async_for-11.py  async_for-8.py  async_for-9.py  async_with-11.py  async_with-8.py  async_with-9.py  break-4.py  break-6.py  break-7.py  break-9.py  class-11.py  class-8.py  class-9.py  continue-4.py  continue-6.py  continue-7.py  continue-9.py  def-11.py  def-8.py  def-9.py  del-11.py  del-6.py  del-8.py  del-9.py  for-11.py  for-8.py  for-9.py  from_import-11.py  from_import-8.py  from_import-9.py  global-11.py  (+38 more)
tests/fixtures/valid/: assert.py  async_def.py  async_for.py  async_with.py  break.py  class.py  continue.py  def.py  del.py  for.py  from_import.py  global.py  if.py  import.py  match.py  nonlocal.py  pass.py  raise.py  return.py  try.py  while.py  with.py  yield.py  yield_from.py
