[tool.poetry]
name = "flake8-bas"
version = "1.0.0"
description = "Flake8 extension that checks for blank lines around (compound) statements."
authors = ["Tomas Mrozek <tm@nohup.run>"]
maintainers = ["Tomas Mrozek <tm@nohup.run>"]
repository = "https://github.com/ts-mk/flake8-bas/"
documentation = "https://github.com/ts-mk/flake8-bas/blob/master/README.md"
readme = "README.md"
license = "MIT"
classifiers = [
    'Environment :: Console',
    'Framework :: Flake8',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Documentation',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
flake8 = ">=3.8.0"
setuptools = "*"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
isort = ">=5.12.0,<6.0.0"
pre-commit = ">=3.1.0,<4.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0,<8.0.0"
pytest-cov = ">=3.0.0,<4.0.0"

[tool.poetry.group.ci.dependencies]
click = ">=8.1.0,<9.0.0"

[tool.poetry.plugins."flake8.extension"]
BAS = "flake8_bas:StatementChecker"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude = ".*tests/fixtures/.*"
line-length = 88
skip-numeric-underscore-normalization = true

[tool.interrogate]
color = true
exclude = ["tests", ".local"]
fail-under = 100
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true
ignore-private = false
ignore-property-decorators = true
ignore-semiprivate = false
quiet = false
verbose = 2

[tool.isort]
extend_skip_glob = [".local/*", "tests/fixtures/*"]
filter_files = true
line_length = 88
no_lines_before = ["LOCALFOLDER"]
profile = "black"
